--- a/contact.html
+++ b/contact.html
@@ -58,18 +58,17 @@
     <div class="container-fluid position-relative nav-bar p-0">
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-light navbar-light shadow-lg py-3 py-lg-0 pl-3 pl-lg-5">
-                <a href="" class="navbar-brand">
-                    <h1 class="m-0 text-primary"><span class="text-dark">MIRA</span>MAR</h1>
-                </a>
+                <img src="img/logo-miramar@2x.png" alt="Miramar de Ansenuza" style="height:40px;width:auto">
+        <span class="sr-only">Miramar de Ansenuza</span>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
-                        <a href="about.html" class="nav-item nav-link">Servicios</a>
-                        <a href="service.html" class="nav-item nav-link">Acerca de</a>
-                        <a href="package.html" class="nav-item nav-link">Alojamientos</a>
+                        
+                        <a href="about.html" class="nav-item nav-link">Acerca de</a>
+                      
                         <a href="contact.html" class="nav-item nav-link active">Contacto</a>
                     </div>
                 </div>
@@ -80,19 +79,25 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid page-header">
-        <div class="container">
-            <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 400px">
-                <h3 class="display-4 text-white text-uppercase">Contáctanos</h3>
-                <div class="d-inline-flex text-white">
-                    <p class="m-0 text-uppercase"><a class="text-white" href="">Inicio</a></p>
-                    <i class="fa fa-angle-double-right pt-1 px-3"></i>
-                    <p class="m-0 text-uppercase">Contacto</p>
-                </div>
-            </div>
-        </div>
+<!-- CONTACT HEADER (mismo estilo del hero) -->
+<header class="page-header-ansenuza"
+        style="background-image:url('img/flamencos.jpg'); background-position:center; background-size:cover;">
+  <div class="container">
+    <div class="hero-wrap d-flex flex-column align-items-center justify-content-center">
+      <span class="hero-kicker">Oficina de Turismo</span>
+      <h1 class="hero-title"><span class="hero-accent">Contacto</span></h1>
+      <p class="hero-subtitle">Estamos para ayudarte</p>
+
+      <nav aria-label="breadcrumb" class="hero-breadcrumb">
+        <ol class="breadcrumb justify-content-center">
+          <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Contacto</li>
+        </ol>
+      </nav>
     </div>
-    <!-- Header End -->
+  </div>
+</header>
+
 
 
     <!-- Contact Start -->
@@ -142,66 +147,82 @@
     <!-- Contact End -->
 
 
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" style="margin-top: 90px;">
-        <div class="row pt-5">
-            <div class="col-lg-3 col-md-6 mb-5">
-                <a href="" class="navbar-brand">
-                    <h1 class="text-primary"><span class="text-white">MIRA</span>MAR</h1>
-                </a>
-                <p>Ubicada en el corazón de Argentina, al Noreste
-de la Provincia de Córdoba. Declarada Parque
-Nacional, siendo el mayor lago de agua salada
-de Sudamérica, y siendo así la mayor reserva
-del País. Así de MARAVILLOSA, así y mas es
-nuestra querida Miramar</p>
-                <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Siguenos</h6>
-                <div class="d-flex justify-content-start">
-                    <a class="btn btn-outline-primary btn-square mr-2" href="https://www.facebook.com/turismomiramardeansenuza/"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/miramardeansenuza/"><i class="fab fa-instagram"></i></a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Usefull Links</h5>
-                <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white-50 mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
-                    <a class="text-white-50 mb-2" href="service.html"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
-                    <a class="text-white-50 mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>Acerca de</a>
-                    <a class="text-white-50 mb-2" href="package.html"><i class="fa fa-angle-right mr-2"></i>Alojamientos</a>
-                    <a class="text-white-50 mb-2" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contacto</a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contáctenos </h5>
-                <p><i class="fa fa-map-marker-alt mr-2"></i>General Paz 465, Miramar Córdoba</p>
-                <p><i class="fa fa-phone-alt mr-2"></i>3563 - 409731</p>
-                <p><i class="fa fa-envelope mr-2"></i>oficinadeturismo2@gmail.com</p>
-                <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Recibí nuestras novedades</h6>
-                <p>Dejanos tu Email, para enterarte sobre nuevas novedades....</p>
-                <div class="w-100">
-                    <div class="input-group">
-                        <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Su Email">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary px-3">Anotarse</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <!-- FOOTER -->
+<div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" style="margin-top: 40px;">
+  <div class="row pt-4">
+    <!-- Col 1: Logo + descripción -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <a href="index.html" class="navbar-brand d-inline-flex align-items-center mb-2">
+        <img src="img/logo-miramar@2x.png" alt="Miramar de Ansenuza" style="height:40px;width:auto">
+        <span class="sr-only">Miramar de Ansenuza</span>
+      </a>
+      <p class="mt-2">
+        Ubicada en el corazón de Argentina, al noreste de la Provincia de Córdoba. Declarada Parque Nacional,
+        siendo el mayor lago de agua salada de Sudamérica y la mayor reserva del país. Así de maravillosa —y más—
+        es nuestra querida Miramar.
+      </p>
+      <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 4px;">Seguinos</h6>
+      <div class="d-flex">
+        <a class="btn btn-outline-primary btn-square mr-2" href="https://www.facebook.com/turismomiramardeansenuza/"><i class="fab fa-facebook-f"></i></a>
+        <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/miramardeansenuza/"><i class="fab fa-instagram"></i></a>
+      </div>
     </div>
-    <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <div class="row">
-            <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white-50">Copyright &copy; <a href="#">Domain</a>. All Rights Reserved.</a>
-                </p>
-            </div>
-            <div class="col-lg-6 text-center text-md-right">
-                <p class="m-0 text-white-50">Designed by <a href="https://htmlcodex.com">HTML Codex</a>
-                </p>
-            </div>
-        </div>
+
+    <!-- Col 2: Navegación -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 4px;">Navegación</h5>
+      <div class="d-flex flex-column">
+        <a class="text-white-50 mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
+        <a class="text-white-50 mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>Acerca de</a>
+        <a class="text-white-50" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contacto</a>
+      </div>
     </div>
-    <!-- Footer End -->
+
+    <!-- Col 3: Contacto + newsletter + CTA EMAIL -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 4px;">Contáctenos</h5>
+      <p><i class="fa fa-map-marker-alt mr-2"></i>General Paz 465, Miramar, Córdoba</p>
+      <p><i class="fa fa-phone-alt mr-2"></i>3563 - 409731</p>
+      <p><i class="fa fa-envelope mr-2"></i>oficinadeturismo2@gmail.com</p>
+
+      <!-- CTA por Email (reemplaza al WhatsApp) -->
+      <a class="btn btn-primary btn-block mt-2"
+         href="mailto:oficinadeturismo2@gmail.com?subject=Consulta%20desde%20la%20web%20de%20Turismo&body=Hola%20Oficina%20de%20Turismo,%20quisiera%20hacer%20la%20siguiente%20consulta:%0A">
+        <i class="fa fa-paper-plane mr-2"></i>Escribinos por Email
+      </a>
+
+      <!-- Newsletter (opcional; dejalo si te gusta) -->
+      <h6 class="text-white text-uppercase mt-4 mb-2" style="letter-spacing: 4px;">Novedades</h6>
+      <small class="d-block mb-2">Dejanos tu email para enterarte de lo nuevo.</small>
+      <div class="w-100">
+        <div class="input-group">
+          <input type="email" class="form-control border-light" style="padding: 16px;" placeholder="Tu Email">
+          <div class="input-group-append">
+            <button class="btn btn-primary px-3" type="button">Suscribirme</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid bg-dark text-white border-top py-3 px-sm-3 px-md-5" style="border-color: rgba(255,255,255,.08) !important;">
+  <div class="row">
+    <div class="col-md-6 text-center text-md-left mb-2 mb-md-0">
+      <small class="m-0 text-white-50">© <span id="year"></span> Municipalidad de Miramar de Ansenuza. Todos los derechos reservados.</small>
+    </div>
+    <div class="col-md-6 text-center text-md-right">
+      <small class="m-0 text-white-50">Sitio oficial de Turismo</small>
+    </div>
+  </div>
+</div>
+<!-- /FOOTER -->
+
+<!-- Año automático (si aún no lo tenés) -->
+<script>
+  (function(){ var y=document.getElementById('year'); if(y) y.textContent=new Date().getFullYear(); })();
+</script>
+
 
 
     <!-- Back to Top -->
