--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,14 @@
     <div class="container-fluid position-relative nav-bar p-0">
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-light navbar-light shadow-lg py-3 py-lg-0 pl-3 pl-lg-5">
-                <a href="" class="navbar-brand">
-                    <h1 class="m-0 text-primary"><span class="text-dark">MIRA</span>MAR</h1>
+                <a href="index.html" class="navbar-brand d-flex align-items-center">
+                    <img
+                      src="img/logo-miramar.png"
+                      srcset="img/logo-miramar@2x.png 2x"
+                      alt="Miramar de Ansenuza"
+                      class="logo-miramar"
+                    >
+                    <span class="sr-only">Miramar de Ansenuza</span>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -142,41 +148,46 @@
     <!-- Contact End -->
 
 
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" style="margin-top: 90px;">
-        <div class="row pt-5">
-            <div class="col-lg-3 col-md-6 mb-5">
-                <a href="" class="navbar-brand">
-                    <h1 class="text-primary"><span class="text-white">MIRA</span>MAR</h1>
-                </a>
-                <p>Ubicada en el corazón de Argentina, al Noreste
-de la Provincia de Córdoba. Declarada Parque
-Nacional, siendo el mayor lago de agua salada
-de Sudamérica, y siendo así la mayor reserva
-del País. Así de MARAVILLOSA, así y mas es
-nuestra querida Miramar</p>
-                <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Siguenos</h6>
-                <div class="d-flex justify-content-start">
-                    <a class="btn btn-outline-primary btn-square mr-2" href="https://www.facebook.com/turismomiramardeansenuza/"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/miramardeansenuza/"><i class="fab fa-instagram"></i></a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Usefull Links</h5>
-                <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white-50 mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
-                    <a class="text-white-50 mb-2" href="service.html"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
-                    <a class="text-white-50 mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>Acerca de</a>
-                    <a class="text-white-50 mb-2" href="package.html"><i class="fa fa-angle-right mr-2"></i>Alojamientos</a>
-                    <a class="text-white-50 mb-2" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contacto</a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contáctenos </h5>
-                <p><i class="fa fa-map-marker-alt mr-2"></i>General Paz 465, Miramar Córdoba</p>
-                <p><i class="fa fa-phone-alt mr-2"></i>3563 - 409731</p>
-                <p><i class="fa fa-envelope mr-2"></i>oficinadeturismo2@gmail.com</p>
-                <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Recibí nuestras novedades</h6>
+   <!-- Footer Start (limpio y en español) -->
+<div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" style="margin-top: 90px;">
+  <div class="row pt-4">
+    <!-- Col 1: Logo + breve -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <a href="index.html" class="navbar-brand d-inline-flex align-items-center mb-2">
+        <img src="img/logo-miramar@2x.png" alt="Miramar de Ansenuza" style="height:34px;width:auto;">
+      </a>
+      <p class="mt-2">
+        Miramar de Ansenuza, puerta del Parque y Reserva Nacional Ansenuza. 
+        Atardeceres únicos, avistaje de aves y la laguna salada más grande de Sudamérica.
+      </p>
+      <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 4px;">Seguinos</h6>
+      <div class="d-flex">
+        <a class="btn btn-outline-primary btn-square mr-2" href="https://www.facebook.com/turismomiramardeansenuza/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/miramardeansenuza/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+      </div>
+    </div>
+
+    <!-- Col 2: Navegación esencial -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 4px;">Navegación</h5>
+      <div class="d-flex flex-column">
+        <a class="text-white-50 mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
+        <a class="text-white-50 mb-2" href="service.html"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
+        <a class="text-white-50 mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>Acerca de</a>
+        <a class="text-white-50 mb-2" href="package.html"><i class="fa fa-angle-right mr-2"></i>Alojamientos</a>
+        <a class="text-white-50" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contacto</a>
+      </div>
+    </div>
+
+    <!-- Col 3: Contacto + CTA -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 4px;">Contacto</h5>
+      <p><i class="fa fa-map-marker-alt mr-2"></i>DIRECCIÓN OFICINA DE TURISMO (General Paz 465, Miramar Córdoba.)</p>
+      <p><i class="fa fa-phone-alt mr-2"></i>3563 - 409731</p>
+      <p><i class="fa fa-envelope mr-2"></i> oficinadeturismo2@gmail.com <br> infomiramarcba@gmail.com </p>
+
+      <!-- CTA WhatsApp (mejor que newsletter) -->
+      <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Recibí nuestras novedades</h6>
                 <p>Dejanos tu Email, para enterarte sobre nuevas novedades....</p>
                 <div class="w-100">
                     <div class="input-group">
@@ -185,6 +196,22 @@ nuestra querida Miramar</p>
                             <button class="btn btn-primary px-3">Anotarse</button>
                         </div>
                     </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid bg-dark text-white border-top py-3 px-sm-3 px-md-5" style="border-color: rgba(255,255,255,.08) !important;">
+  <div class="row">
+    <div class="col-md-6 text-center text-md-left mb-2 mb-md-0">
+      <small class="m-0 text-white-50">© <span id="year"></span> Municipalidad de Miramar de Ansenuza. Todos los derechos reservados.</small>
+    </div>
+    <div class="col-md-6 text-center text-md-right">
+      <small class="m-0 text-white-50">Sitio oficial de Turismo</small>
+    </div>
+  </div>
+</div>
+<!-- Footer End -->
+                
                 </div>
             </div>
         </div>
