--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="destination-item position-relative overflow-hidden mb-2">
                         <img class="img-fluid" src="img/destination-3.jpg" alt="">
-                        <a class="destination-overlay text-white text-decoration-none" href="">
+                        <a class="destination-overlay text-white text-decoration-none" href="package.html">
                             <h5 class="text-white">Nuestros Alojamientos</h5>
                         </a>
                     </div>
@@ -285,12 +285,10 @@
   </div>
 </div>
 
-<<<<<<< HEAD
 
     <!-- Testimonial Start -->
     
     <!-- Testimonial End -->
-=======
    <!-- Footer Start (limpio y en español) -->
 <div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" style="margin-top: 90px;">
   <div class="row pt-4">
@@ -309,7 +307,6 @@
         <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/miramardeansenuza/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
->>>>>>> 66c122a56dcfac3558c072d149644cac9ca224b6
 
     <!-- Col 2: Navegación esencial -->
     <div class="col-lg-4 col-md-6 mb-4">
