--- a/package.html
+++ b/package.html
@@ -216,57 +216,143 @@
 
     <div class="owl-carousel testimonial-carousel">
 
-      <!-- ITEM 1: logo más abajo -->
-      <div class="text-center pb-4">
-  <img class="img-fluid mx-auto" src="img/Hotel-miramar.jpg.webp" style="width: 180px; height: 180px;">
+   <!-- ITEM 1: Hotel Miramar -->
+<div class="text-center pb-4">
+  <img class="img-fluid mx-auto" src="img/Hotel-miramar.jpg.webp"
+       style="width:180px; height:180px; border-radius:12px; object-fit:cover; transition:transform .3s ease;"
+       onmouseover="this.style.transform='scale(1.08)'" 
+       onmouseout="this.style.transform='scale(1)'">
   <div class="testimonial-text bg-white p-4 mt-n5" style="padding-top:56px;">
     <br>
-    <!-- ICONOS más chicos y con salto de línea si no entran -->
-    <div style="display:flex; justify-content:center; flex-wrap:wrap; gap:10px 14px; margin:8px auto 12px; max-width:280px;">
-      <span><i class="fas fa-mug-hot"        style="font-size:20px;color:#1e3a6d;" title="Desayuno"></i></span>
-      <span><i class="fas fa-car"            style="font-size:20px;color:#1e3a6d;" title="Estacionamiento"></i></span>
-      <span><i class="far fa-snowflake"      style="font-size:20px;color:#1e3a6d;" title="Aire acondicionado"></i></span>
-      <span><i class="fas fa-wifi"           style="font-size:20px;color:#1e3a6d;" title="Wi-Fi"></i></span>
-      <span><i class="fas fa-tv"             style="font-size:20px;color:#1e3a6d;" title="TV"></i></span>
-      <span><i class="fas fa-credit-card"    style="font-size:20px;color:#1e3a6d;" title="Tarjetas"></i></span>
-      <span><i class="fas fa-mountain"       style="font-size:20px;color:#1e3a6d;" title="Excursiones"></i></span>
-      <span><i class="fas fa-swimming-pool"  style="font-size:20px;color:#1e3a6d;" title="Pileta"></i></span>
+    <!-- ICONOS -->
+    <div style="display:flex; justify-content:center; flex-wrap:wrap; align-items:center; gap:10px 14px; margin:8px auto 12px; max-width:280px;">
+      <span><i class="fas fa-mug-hot" style="font-size:20px;color:#1e3a6d;" title="Desayuno"></i></span>
+      <span><i class="fas fa-car" style="font-size:20px;color:#1e3a6d;" title="Estacionamiento"></i></span>
+      <span><i class="far fa-snowflake" style="font-size:20px;color:#1e3a6d;" title="Aire acondicionado"></i></span>
+      <span><i class="fas fa-wifi" style="font-size:20px;color:#1e3a6d;" title="Wi-Fi"></i></span>
+      <span><i class="fas fa-tv" style="font-size:20px;color:#1e3a6d;" title="TV"></i></span>
+      <span><i class="fas fa-credit-card" style="font-size:20px;color:#1e3a6d;" title="Tarjetas"></i></span>
+      <span><i class="fas fa-paw" style="font-size:20px;color:#e63946;" title="No se admiten mascotas"></i></span>
+      <span><i class="fas fa-swimming-pool" style="font-size:20px;color:#1e3a6d;" title="Pileta"></i></span>
     </div>
 
-    <h5 class="text-truncate">Client Name</h5>
-    <span>Profession</span>
+    <h5 class="text-truncate">Hotel Miramar</h5>
+    <div>
+      <i class="fas fa-map-marker-alt mr-2" style="color:#1e3a6d;"></i> 
+      <span>Buenos Aires 200</span>
+    </div>
+    <div>
+      <a href="https://www.google.com/maps/place/Hotel+Comedor+Marchetti/@-30.914945,-62.678084,15z/data=!4m5!3m4!1s0x0:0x1ea8a57b0d08166a!8m2!3d-30.9149195!4d-62.678102?ll=-30.914945,-62.678084&z=15&t=m&hl=es-US&gl=US&mapclient=embed&cid=2209197565143422570&coh=164777&entry=tt&shorturl=1" 
+         style="text-decoration: none; color: rgb(240, 111, 135);">
+        (Ver Ubicación)
+      </a>
+    </div>
   </div>
 </div>
 
-      <!-- ITEM 2 -->
-      <div class="text-center">
-        <img class="img-fluid mx-auto" src="img/testimonial-2.jpg" style="width: 100px; height: 100px;">
-        <div class="testimonial-text bg-white p-4 mt-n5">
-          <p class="mt-5">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
-          <h5 class="text-truncate">Client Name</h5>
-          <span>Profession</span>
-        </div>
-      </div>
+
+
+<!-- ITEM 2: Ansenuza Hotel Casino Spa -->
+<div class="text-center pb-4">
+  <img class="img-fluid mx-auto" src="img/MDT_fk_obra-galeria__1703079284.webp" alt="Galería del hotel"
+       style="width:180px; height:180px; border-radius:12px; object-fit:cover; transition:transform .3s ease;" 
+       onmouseover="this.style.transform='scale(1.08)'" 
+       onmouseout="this.style.transform='scale(1)'">
+  <div class="testimonial-text bg-white p-4 mt-n5" style="padding-top:56px;">
+    <br>
+    <!-- ICONOS -->
+    <div style="display:flex; justify-content:center; flex-wrap:wrap; gap:10px 14px; margin:8px auto 12px; max-width:280px;">
+      <span><i class="fas fa-mug-hot" style="font-size:20px;color:#1e3a6d;" title="Desayuno"></i></span>
+      <span><i class="fas fa-car" style="font-size:20px;color:#1e3a6d;" title="Estacionamiento"></i></span>
+      <span><i class="far fa-snowflake" style="font-size:20px;color:#1e3a6d;" title="Aire acondicionado"></i></span>
+      <span><i class="fas fa-wifi" style="font-size:20px;color:#1e3a6d;" title="Wi-Fi"></i></span>
+      <span><i class="fas fa-tv" style="font-size:20px;color:#1e3a6d;" title="TV"></i></span>
+      <span><i class="fas fa-credit-card" style="font-size:20px;color:#1e3a6d;" title="Tarjetas"></i></span>
+      <span><i class="fas fa-paw" style="font-size:20px;color:#e63946;" title="No se admiten mascotas"></i></span>
+      <span><i class="fas fa-swimming-pool" style="font-size:20px;color:#1e3a6d;" title="Pileta"></i></span>
+    </div>
+
+    <h5 class="text-truncate">Ansenuza Hotel Casino Spa</h5>
+    <div>
+      <i class="fas fa-map-marker-alt mr-2" style="color:#1e3a6d;"></i> 
+      <span>Calle Costanera Oeste</span>
+    </div>
+    <div>
+      <a href="https://www.google.com/maps/place/Hotel+Comedor+Marchetti/@-30.914945,-62.678084,15z/data=!4m5!3m4!1s0x0:0x1ea8a57b0d08166a!8m2!3d-30.9149195!4d-62.678102?ll=-30.914945,-62.678084&z=15&t=m&hl=es-US&gl=US&mapclient=embed&cid=2209197565143422570&coh=164777&entry=tt&shorturl=1" 
+         style="text-decoration: none; color: rgb(240, 111, 135);">
+        (Ver Ubicación)
+      </a>
+    </div>
+  </div>
+</div>
 
       <!-- ITEM 3 -->
-      <div class="text-center">
-        <img class="img-fluid mx-auto" src="img/testimonial-3.jpg" style="width: 100px; height: 100px;">
-        <div class="testimonial-text bg-white p-4 mt-n5">
-          <p class="mt-5">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
-          <h5 class="text-truncate">Client Name</h5>
-          <span>Profession</span>
-        </div>
-      </div>
+      <div class="text-center pb-4">
+  <img class="img-fluid mx-auto" src="img/1541597884_alas-del-sol.jpg.webp" alt="Galería del hotel"
+       style="width:180px; height:180px; border-radius:12px; object-fit:cover; transition:transform .3s ease;" 
+       onmouseover="this.style.transform='scale(1.08)'" 
+       onmouseout="this.style.transform='scale(1)'">
+  <div class="testimonial-text bg-white p-4 mt-n5" style="padding-top:56px;">
+    <br>
+    <!-- ICONOS -->
+    <div style="display:flex; justify-content:center; flex-wrap:wrap; gap:10px 14px; margin:8px auto 12px; max-width:280px;">
+      <span><i class="fas fa-mug-hot" style="font-size:20px;color:#1e3a6d;" title="Desayuno"></i></span>
+      <span><i class="fas fa-car" style="font-size:20px;color:#1e3a6d;" title="Estacionamiento"></i></span>
+      <span><i class="far fa-snowflake" style="font-size:20px;color:#1e3a6d;" title="Aire acondicionado"></i></span>
+      <span><i class="fas fa-wifi" style="font-size:20px;color:#1e3a6d;" title="Wi-Fi"></i></span>
+      <span><i class="fas fa-tv" style="font-size:20px;color:#1e3a6d;" title="TV"></i></span>
+      <span><i class="fas fa-paw" style="font-size:20px;color:#e63946;" title="No se admiten mascotas"></i></span>
+      <span><i class="fas fa-swimming-pool" style="font-size:20px;color:#1e3a6d;" title="Pileta"></i></span>
+    </div>
+
+    <h5 class="text-truncate">Cabañas Alas del Sol</h5>
+    <div>
+      <i class="fas fa-map-marker-alt mr-2" style="color:#1e3a6d;"></i> 
+      <span>Patricias Argentinas 392</span>
+    </div>
+    <div>
+      <a href="https://www.google.com/maps/place/Caba%C3%B1as+Alas+del+Sol/@-30.919147,-62.678202,15z/data=!4m10!3m9!1s0x94349ad0a4f4e349:0xb1274b254d2d99b7!5m3!1s2025-09-23!4m1!1i2!8m2!3d-30.919147!4d-62.6782016!16s%2Fg%2F11b7q9kl1r?hl=es-US&entry=ttu&g_ep=EgoyMDI1MDkxNi4wIKXMDSoASAFQAw%3D%3D" 
+         style="text-decoration: none; color: rgb(240, 111, 135);">
+        (Ver Ubicación)
+      </a>
+    </div>
+  </div>
+</div>
+
 
       <!-- ITEM 4 -->
-      <div class="text-center">
-        <img class="img-fluid mx-auto" src="img/testimonial-4.jpg" style="width: 100px; height: 100px;">
-        <div class="testimonial-text bg-white p-4 mt-n5">
-          <p class="mt-5">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
-          <h5 class="text-truncate">Client Name</h5>
-          <span>Profession</span>
-        </div>
-      </div>
+       <div class="text-center pb-4">
+  <img class="img-fluid mx-auto" src="img/WhatsApp-Image-2024-11-20-at-13.35.02.jpeg.webp" alt="Galería del hotel"
+       style="width:180px; height:180px; border-radius:12px; object-fit:cover; transition:transform .3s ease;" 
+       onmouseover="this.style.transform='scale(1.08)'" 
+       onmouseout="this.style.transform='scale(1)'">
+  <div class="testimonial-text bg-white p-4 mt-n5" style="padding-top:56px;">
+    <br>
+    <!-- ICONOS -->
+    <div style="display:flex; justify-content:center; flex-wrap:wrap; gap:10px 14px; margin:8px auto 12px; max-width:280px;">
+  <span><i class="fas fa-car" style="font-size:20px;color:#1e3a6d;" title="Estacionamiento"></i></span>
+  <span><i class="far fa-snowflake" style="font-size:20px;color:#1e3a6d;" title="Aire acondicionado"></i></span>
+  <span><i class="fas fa-wifi" style="font-size:20px;color:#1e3a6d;" title="Wi-Fi"></i></span>
+  <span><i class="fas fa-tv" style="font-size:20px;color:#1e3a6d;" title="TV"></i></span>
+  <span><i class="fas fa-paw" style="font-size:20px;color:#1e3a6d;" title="No se admiten mascotas"></i></span>
+  <span><i class="fas fa-swimming-pool" style="font-size:20px;color:#1e3a6d;" title="Pileta"></i></span>
+  <span><i class="fas fa-fire" style="font-size:20px;color:#1e3a6d;" title="Asador / Parrilla"></i></span>
+</div>
+
+
+    <h5 class="text-truncate">Costa Marina</h5>
+    <div>
+      <i class="fas fa-map-marker-alt mr-2" style="color:#1e3a6d;"></i> 
+      <span>Patricias Argentinas 392</span>
+    </div>
+    <div>
+      <a href="https://www.google.com/maps/place/Caba%C3%B1as+Alas+del+Sol/@-30.919147,-62.678202,15z/data=!4m10!3m9!1s0x94349ad0a4f4e349:0xb1274b254d2d99b7!5m3!1s2025-09-23!4m1!1i2!8m2!3d-30.919147!4d-62.6782016!16s%2Fg%2F11b7q9kl1r?hl=es-US&entry=ttu&g_ep=EgoyMDI1MDkxNi4wIKXMDSoASAFQAw%3D%3D" 
+         style="text-decoration: none; color: rgb(240, 111, 135);">
+        (Ver Ubicación)
+      </a>
+    </div>
+  </div>
+</div>
 
     </div>
   </div>
